...
                                .accessibilityIdentifier("launches_query_list_item_\(launch.id ?? "")")
                        })
                        .listRowBackground(Color("AppBackground"))
                    }
                }
                .listStyle(.plain)
                .accessibilityIdentifier("launches_query_list")
            } else {
                if loadingData == false {
                    EmptyDataView(text: NSLocalizedString("EMPTY_DATA_ERROR", comment: ""))
                        .accessibilityIdentifier("empty_view_list_mission_view")
                }
            }
            Spacer()
        }
        .navigationTitle(NSLocalizedString("MISSION_LIST_VIEW", comment: ""))
        .searchable(text: $viewModel.textSearch)
...
