...
                        }
                    }
                }
                .padding()
            }
        }
        .accessibilityIdentifier("mission_detail_view")
        .background(Color("AppBackground"))
        .navigationTitle(item.mission_name ?? "")
        .navigationBarTitleDisplayMode(.inline)
        .onAppear {
            viewModel.fetchDetail()
            
...
